# v4l2-streamer-ros

./: .gitignore  CMakeLists.txt  CMakeLists_standalone.txt  README  README.md  VERSION  package.xml
ClientFiles_C/: Client_API.h  Client_Dispatcher.c  Client_Packager.c  Client_Packager.h  Serializer_Struct.h  UART_Connector.h  example_linux.c
EmulatorFiles/: CameraSerialConfig.ini  HostBinaryProtocol.c  Makefile  UART_HalfDuplex.h  User_image_capture.py  flirChannels.h  rs232.c  rs232.h
config/: boson640_config.yaml  zed_config.yaml
config/calibration/: boson640.yaml  left.yaml  left_376p.yaml  right.yaml  right_376p.yaml
include/: Client_API.c  Client_Dispatcher.h  Client_Packager.c  EnumTypes.h  FunctionCodes.h  ReturnCodes.h  Serializer_BuiltIn.h  Serializer_Struct.c  UART_Connector.c  boson_camera.h  zed_camera.h
launch/: v4l2_camera.launch
lib/: UART_HalfDuplex.py  UART_HalfDuplex64.def  flirChannels.c
src/: boson_camera.cpp  boson_camera.h  boson_ros_node.cpp  main.cpp  ros_node.cpp  v4l2_camera.cpp  v4l2_camera.h  zed_camera.cpp  zed_ros_node.cpp
