<?xml version="1.0"?>
<package>
    <name>v4l2_camera</name>

    <version>1.0.1</version>
    <license>GNU GPL</license>
    <description>ROS Wrapper for standard UVC (V4L2) cameras which can be mounted through /dev/videoX.</description>

    <author>Andreas Aumiller</author>
    <maintainer email="andy.aumiller@gmail.com">Andreas Aumiller</maintainer>


    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <build_depend>OpenCV</build_depend>
    <build_depend>camera_info_manager</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

</package>
